# rust-mailing-list-db

./: LICENSE  README.md
rust-mailing-list-db/: Cargo.toml
rust-mailing-list-db/src/: email.rs  main.rs
