[package]
name = "rust-mailing-list-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "0.34.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.5.4"
uuid = { version = "0.8" , features = ["serde", "v4"] }

